--- a/minesweeper.css
+++ b/minesweeper.css
@@ -40,6 +40,11 @@ h2 {
   margin-bottom: 20px;
 }
 
+h3 {
+  font-size: 1.1em;
+  text-align:center;
+}
+
 td.opened {
   background: url('img/opened.svg');
 }
@@ -111,4 +116,11 @@ table#minesweeper td {
   margin-top: 40px;
   margin-bottom: 10px;
   text-align: center;
+}
+
+.status {
+  margin-top: 50px;
+  width: 20%;
+  height: 40%;
+  background-color: yellow;
 }
